map still not showing - fixed css tag error

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -245,7 +245,7 @@ abbr[title="required"] {
 
 /* Optional: Makes the sample page fill the window. */
 
-html, body, #map-canvas {
+html, body, #map {
   height: 225%;
   margin: 0;
   padding: 0;
